hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch5.php
<?hh

function f(): void {
  $d = vec<int>[false, false, true];
}
